# DonerComponents

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTIONS.md  LICENSE  README.md  appveyor.yml  generate_MSYS_clang.sh  generate_MSYS_gcc.sh  project_generation_scripts.py
DonerComponents/: CMakeLists.txt
DonerComponents/include/donercomponents/: CDonerComponentsSystems.h  Defines.h  ErrorMessages.h
DonerComponents/include/donercomponents/common/: CFactory.h  CFactoryElement.h  CSingleton.h
DonerComponents/include/donercomponents/component/: CComponent.h  CComponentFactory.h  CComponentFactoryManager.h
DonerComponents/include/donercomponents/gameObject/: CGameObject.h  CGameObjectParser.h  CPrefabManager.h
DonerComponents/include/donercomponents/handle/: CHandle.h
DonerComponents/include/donercomponents/messages/: CMsgHandler.h  CPostMsg.h
DonerComponents/include/donercomponents/tags/: CTagsManager.h
DonerComponents/include/donercomponents/utils/hash/: CStrID.h  CTypeHasher.h  elbeno_constexpr_murmur3.h  hash_cstrid.h
DonerComponents/include/donercomponents/utils/memory/: CFileDataProvider.h  CMemoryDataProvider.h  IDataProvider.h
DonerComponents/source/common/: CDonerComponentsSystems.cpp
DonerComponents/source/common/component/: CComponent.cpp  CComponentFactory.cpp  CComponentFactoryManager.cpp
DonerComponents/source/common/gameObject/: CGameObject.cpp  CGameObjectParser.cpp  CPrefabManager.cpp
DonerComponents/source/common/handle/: CHandle.cpp
DonerComponents/source/common/tags/: CTagsManager.cpp
DonerComponents/source/common/utils/memory/: CFileDataProvider.cpp  CMemoryDataProvider.cpp
DonerComponents/tests/source/common/: CComponentHandleTest.cpp  CComponentTest.cpp  CDeserializationTest.cpp  CFactoryTest.cpp  CGameObjectComponentTest.cpp  CGameObjectHandleTest.cpp  CGameObjectManagerTest.cpp  CGameObjectParserTest.cpp  CGameObjectTagsTest.cpp  CGameObjectTest.cpp  CMessagesTest.cpp  CPrefabManagerTest.cpp  CStrIDTest.cpp  CTagsTest.cpp
DonerECS/: CMakeLists.txt
DonerECS/include/donerecs/: CDonerECSSystems.h  Defines.h  DonerECSSystems.h  ErrorMessages.h  akrzemi1_optional.h
DonerECS/include/donerecs/common/: CECSElement.h  CFactory.h  CSingleton.h
DonerECS/include/donerecs/component/: CComponent.h  CComponentFactory.h  CComponentFactoryManager.h
DonerECS/include/donerecs/entity/: CEntity.h  CEntityManager.h  CEntityParser.h  CPrefabManager.h
DonerECS/include/donerecs/handle/: CHandle.h
DonerECS/include/donerecs/messages/: CMsgHandler.h  CPostMsg.h
DonerECS/include/donerecs/reflection/: Reflection.h
DonerECS/include/donerecs/tags/: CTagsManager.h
DonerECS/include/donerecs/utils/hash/: CStrID.h  CTypeHasher.h  elbeno_constexpr_murmur3.h  hash_cstrid.h
DonerECS/include/donerecs/utils/memory/: CFileDataProvider.h  CMemoryDataProvider.h  IDataProvider.h
DonerECS/source/common/: CDonerECSSystems.cpp
DonerECS/source/common/component/: CComponent.cpp  CComponentFactory.cpp  CComponentFactoryManager.cpp
DonerECS/source/common/entity/: CEntity.cpp  CEntityParser.cpp  CPrefabManager.cpp
DonerECS/source/common/handle/: CHandle.cpp
DonerECS/source/common/reflection/: Reflection.cpp  ReflectionBasicTypes.cpp
DonerECS/source/common/tags/: CTagsManager.cpp
DonerECS/source/common/utils/memory/: CFileDataProvider.cpp  CMemoryDataProvider.cpp
DonerECS/tests/source/common/: CComponentHandleTest.cpp  CComponentTest.cpp  CDeserializationTest.cpp  CEntityComponentTest.cpp  CEntityHandleTest.cpp  CEntityManagerTest.cpp  CEntityParserTest.cpp  CEntityTagsTest.cpp  CEntityTest.cpp  CFactoryTest.cpp  CMessagesTest.cpp  CPrefabManagerTest.cpp  CReflectionTest.cpp  CStrIDTest.cpp  CTagsTest.cpp
cmake/: utils.cmake
include/donerecs/: ErrorMessages.h
include/donerecs/common/: CFactory.h
include/donerecs/component/: CComponent.h  CComponentFactory.h  CComponentFactoryManager.h
include/donerecs/entity/: CEntity.h  CEntityManager.h  CEntityParser.h
include/donerecs/handle/: CHandle.h
include/donerecs/json/: json-forwards.h  json.h
include/donerecs/messages/: CMsgHandler.h
include/donerecs/tags/: CTagsManager.h
include/donerecs/utils/hash/: CStrID.h  CTypeHasher.h
include/donerecs/utils/memory/: CFileDataProvider.h  CMemoryDataProvider.h
scripts/: travis.sh
source/common/component/: CComponentFactoryManager.cpp
source/common/entity/: CEntity.cpp  CEntityManager.cpp  CEntityParser.cpp  CPrefabManager.cpp
source/common/json/: jsoncpp.cpp
source/common/tags/: CTagsManager.cpp
tests/source/: main.cpp
tests/source/common/: CComponentHandleTest.cpp  CComponentTest.cpp  CEntityComponentTest.cpp  CEntityHandleTest.cpp  CEntityManagerTest.cpp  CEntityParserTest.cpp  CEntityTagsTest.cpp  CEntityTest.cpp  CMessagesTest.cpp  CPrefabManagerTest.cpp  CTagsTest.cpp
